// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppImage 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp-1.0.0-x86_64.AppImage",
      "updateInfo": Object {},
    },
    Object {
      "file": "latest-linux.yml",
      "fileContent": Object {
        "path": "TestApp-1.0.0-x86_64.AppImage",
        "url": "TestApp-1.0.0-x86_64.AppImage",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`AppImage 2`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp-1.0.1-x86_64.AppImage",
      "updateInfo": Object {},
    },
    Object {
      "file": "latest-linux.yml",
      "fileContent": Object {
        "path": "TestApp-1.0.1-x86_64.AppImage",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`AppImage 3`] = `
Object {
  "name": "TestApp-1.0.1-x86_64.AppImage",
}
`;

exports[`AppImage 4`] = `
Array [
  "TestApp-1.0.1-x86_64.AppImage",
]
`;

exports[`AppImage ia32 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "ia32",
      "file": "TestApp-1.0.0-i386.AppImage",
      "updateInfo": Object {},
    },
    Object {
      "file": "latest-linux-ia32.yml",
      "fileContent": Object {
        "path": "TestApp-1.0.0-i386.AppImage",
        "url": "TestApp-1.0.0-i386.AppImage",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`AppImage ia32 2`] = `
Object {
  "linux": Array [
    Object {
      "arch": "ia32",
      "file": "TestApp-1.0.1-i386.AppImage",
      "updateInfo": Object {},
    },
    Object {
      "file": "latest-linux-ia32.yml",
      "fileContent": Object {
        "path": "TestApp-1.0.1-i386.AppImage",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`AppImage ia32 3`] = `
Object {
  "name": "TestApp-1.0.1-i386.AppImage",
}
`;

exports[`AppImage ia32 4`] = `
Array [
  "TestApp-1.0.1-i386.AppImage",
]
`;

exports[`web installer 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "packages": Object {
          "x64": Object {
            "path": "TestApp-1.0.0-x64.nsis.7z",
          },
        },
        "path": "Test App ßW Web Setup 1.0.0.exe",
        "url": "Test App ßW Web Setup 1.0.0.exe",
        "version": "1.0.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW Web Setup 1.0.0.exe",
      "safeArtifactName": "TestApp-WebSetup-1.0.0.exe",
      "updateInfo": Object {
        "packages": Object {
          "x64": Object {
            "path": "TestApp-1.0.0-x64.nsis.7z",
          },
        },
      },
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.0.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer 2`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "packages": Object {
          "x64": Object {
            "path": "TestApp-1.0.1-x64.nsis.7z",
          },
        },
        "path": "Test App ßW Web Setup 1.0.1.exe",
        "version": "1.0.1",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW Web Setup 1.0.1.exe",
      "safeArtifactName": "TestApp-WebSetup-1.0.1.exe",
      "updateInfo": Object {
        "packages": Object {
          "x64": Object {
            "path": "TestApp-1.0.1-x64.nsis.7z",
          },
        },
      },
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.0.1-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer 3`] = `
Object {
  "name": "Test App ßW Web Setup 1.0.1.exe",
}
`;

exports[`web installer 4`] = `
Array [
  "Test App ßW Web Setup 1.0.1.exe",
  "Test App ßW Web Setup 1.0.1.exe-package.7z",
]
`;
